--- a/resume.html
+++ b/resume.html
@@ -76,6 +76,14 @@
                 <img src="images/logos/css.png" alt="">
             </div>
             <div class="card">
+                <h4>JavaScript</h4>
+                <img src="images/logos/javascript.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Java</h4>
+                <img src="images/logos/java.png" alt="">
+            </div>
+            <div class="card">
                 <h4>Node.js</h4>
                 <img src="images/logos/node.png" alt="">
             </div>
