--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     -->
 
     <!-- Projects -->
-    <section class="cloud bg-primary my-2 py-4">
+    <section id="projects" class="cloud bg-primary my-2 py-4">
         <div class="container grid">
             <div class="text-center">
                 <h2 class="lg">Toro Navigation</h2>
