--- a/resume.html
+++ b/resume.html
@@ -121,54 +121,10 @@
             <div>
                 <h1 class="md">Projects</h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor cupiditate dignissimos temporibus perspiciatis quae! Suscipit qui, consectetur ea consequatur, doloribus repellendus quasi, aut corporis nam alias culpa. Nostrum, inventore accusantium!
+                    Please view my projects on my Github page <a href="https://github.com/mlyhoops"><i><b>here.</b></i></a> You can also view the YouTube video demos of my school projects on the <a href="index.html#projects"><i><b>Home Page.</b></i></a>
                 </p>
             </div>
             <img src="images/server2.png" alt="">
-        </div>
-    </section>
-
-    <section class="features-main my-2">
-        <div class="container grid grid-3">
-            <div class="card flex">
-                <i class="fas fa-server fa-3x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo saepe corrupti et dolorem voluptate at, nostrum rem voluptatem ab alias quia molestiae ea, libero nihil deserunt. Molestias, eum? Necessitatibus!</p>
-            </div>
-            <div class="card flex">
-                <i class="fas fa-network-wired fa-3x"></i>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                    recusandae perferendis culpa, reiciendis a itaque debitis qui vel
-                    dignissimos ipsum!
-                </p>
-            </div>
-            <div class="card flex">
-                <i class="fas fa-laptop-code fa-3x"></i>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                    magnam.
-                </p>
-            </div>
-            <div class="card flex">
-                <i class="fas fa-database fa-3x"></i>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, a!
-                </p>
-            </div>
-            <div class="card flex">
-                <i class="fas fa-power-off fa-3x"></i>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                    magnam.
-                </p>
-            </div>
-            <div class="card flex">
-                <i class="fas fa-upload fa-3x"></i>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                    magnam.
-                </p>
-            </div>
         </div>
     </section>
 
