--- a/contact.html
+++ b/contact.html
@@ -41,23 +41,11 @@
         <div class="container grid">
             <div class="showcase-form card">
                 <h2>Contact Me</h2>
-                 <!--  <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true">
+                 <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true">
                     <input type="hidden" name="form-name" value="contact">
                     <p class="hidden">
                         <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
                       </p>
-                    <div class="form-control">
-                        <input type="text" name="name" placeholder="Name" required>
-                    </div>
-                    <div class="form-control">
-                        <input type="text" name="company" placeholder="Company Name" required>
-                    </div>
-                    <div class="form-control">
-                        <input type="email" name="email" placeholder="Email" required>
-                    </div>
-                    <input type="submit" value="Send" class="btn btn-primary">
-                </form> -->
-                 <form>
                     <div class="form-control">
                         <input type="text" name="name" placeholder="Name" required>
                     </div>
@@ -72,6 +60,22 @@
                     </div>
                     <input type="submit" value="Send" class="btn btn-primary">
                 </form>
+                <!-- <form>
+                    <div class="form-control">
+                        <input type="text" name="name" placeholder="Name" required>
+                    </div>
+                    <div class="form-control">
+                        <input type="text" name="company" placeholder="Company Name" required>
+                    </div>
+                    <div class="form-control">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-control">
+                        <textarea placeholder="Comments" required></textarea>
+                    </div>
+                    <input type="submit" value="Send" class="btn btn-primary">
+                </form>
+                -->
             </div>
         </div>
     </section>
