--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                         <input type="email" name="email" placeholder="Email" required>
                     </div>
                     <div class="form-control">
-                        <textarea placeholder="Comments" required></textarea>
+                        <textarea name="message" placeholder="Comments" required></textarea>
                     </div>
                     <input type="submit" value="Send" class="btn btn-primary">
                 </form>
