--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container grid">
             <div class="showcase-text">
                 <h1>Jr. Software Developer</h1>
-                <p>Hello, I am a Jr. Software Developer that is interested in Web Development. This website showcases all of my previous projects, both software and mechanical. If you would like to review my resume, please click below. Thank you for checking out my site! </p>
+                <p>Hello, I am a Jr. Software Developer that is interested in Roboitics and data analysis. This website showcases all of my previous projects, both software and mechanical. If you would like to review my resume, please click below. Thank you for checking out my site! </p>
                 <a href="resume.html" class="btn btn-outline">View Resume</a>
             </div>
             <div class="showcase-pic">
@@ -45,13 +45,18 @@
             <div class="grid grid-3 text-center my-4">
                 <div>
                     <i class="fas fa-scroll fa-3x"></i>
-                    <h3>B.S. in Comp Sci</h3>
+                    <h3>B.S. in Comp Sci (2019)</h3>
                     <p class="text-secondary">Education</p>
                 </div>
                 <div>
                     <i class="fas fa-server fa-3x"></i>
                     <h3>IT Support</h3>
                     <p class="text-secondary">Current Job</p>
+                </div>
+                <div>
+                    <i class="fas fa-scroll fa-3x"></i>
+                    <h3>M.S. in Comp Sci (2024)</h3>
+                    <p class="text-secondary">Education</p>
                 </div>
                 <div>
                     <i class="fas fa-car fa-3x"></i>
