--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p class="lead my-1">Senior project where we had to come up with an app that we haven't seen before. This app would take a livestream and give real time updates on which parking spots were open/taken. In this case it was our school parking lot which was always busy.</p>
                 <a href="https://www.github.com/mlyhoops" class="btn btn-dark">Read More</a>
             </div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Vp_tNLuceOk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/Vp_tNLuceOk?t=140" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 
