--- a/resume.html
+++ b/resume.html
@@ -37,6 +37,16 @@
             <img src="images/docs.png" alt="">
         </div>
     </section>
+    
+    <!-- Resume PDF -->
+    <section class="languages bg-light py-3" >
+        <h2 class="md text-center my-2">
+            Resume
+        </h2>
+        <div class="container flex">
+            <embed src="files/Brochure.pdf" type="application/pdf" width="100%" height="600px" />
+        </div>
+    </section>
 
     <!-- Edcuation -->
     <section class="education py-3">
