--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
             Resume
         </h2>
         <div class="container flex">
-            <embed src="/Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="600px" />
+            <embed src="/Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%" />
         </div>
     </section>
 
