--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,8 @@
             Resume
         </h2>
         <div class="container flex">
-            <embed src="/Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%" />
+            <!--<embed src="/Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%" /> -->
+            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" style="min-height:100vh;width:100%"></object>
         </div>
     </section>
 
