--- a/resume.html
+++ b/resume.html
@@ -135,7 +135,7 @@
                     Please view my projects on my Github page <a href="https://github.com/mlyhoops"><i><b>here.</b></i></a> You can also view the YouTube video demos of my school projects on the <a href="index.html#projects"><i><b>Home Page.</b></i></a>
                 </p>
             </div>
-            <img src="images/server2.png" alt="">
+            <img src="images/logos/github.png" alt="">
         </div>
     </section>
 
