--- a/resume.html
+++ b/resume.html
@@ -122,7 +122,7 @@
                     <li>Tested operations in dev environment to make sure new upgrades work seamlessly with live operations.</li>
                 </ul>
             </div>
-            <img src="images/server2.png" alt="">
+            <img src="images/logos/cogo.png" alt="">
         </div>
     </section>
 
