--- a/resume.html
+++ b/resume.html
@@ -64,6 +64,12 @@
                     Graduated in 2019 with a Bachelors of Science Degree in Computer Science.
                 </p>
             </div>
+            <div class="card">
+                <h3>California State University Dominguez Hills (2022-2024)</h3>
+                <p>
+                    Will graduate in Spring 2024 with a Masters Degree in Computer Science.
+                </p>
+            </div>
            
         </div>
     </section>
