--- a/resume.html
+++ b/resume.html
@@ -67,7 +67,7 @@
             <div class="card">
                 <h3>California State University Dominguez Hills (2022-2024)</h3>
                 <p>
-                    Will graduate in Spring 2024 with a Masters Degree in Computer Science.
+                    Will graduate in 2024 with a Masters Degree in Computer Science.
                 </p>
             </div>
            
