--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
     <!-- Stats -->
     <section class="stats">
         <div class="container">
-           
-
             <div class="grid grid-4 text-center my-4">
                 <div>
                     <i class="fas fa-scroll fa-4x"></i>
@@ -83,7 +81,7 @@
 
     <!-- Projects -->
     <section id="projects" class="cloud bg-primary my-2 py-4">
-        <div class="container grid">
+        <div class="container">
             <div class="text-center">
                 <h2 class="lg">Toro Navigation</h2>
                 <p class="lead my-1">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
@@ -95,7 +93,7 @@
 
 
     <section class="cloud my-2 py-4">
-        <div class="container grid">
+        <div class="container">
             <div class="text-center">
                 <h2 class="lg">Smart Parking</h2>
                 <p class="lead my-1">Senior project where we had to come up with an app that we haven't seen before. This app would take a livestream and give real time updates on which parking spots were open/taken. In this case it was our school parking lot which was always busy.</p>
