--- a/index.html
+++ b/index.html
@@ -65,23 +65,9 @@
         </div>
     </section>
 
-    <!-- Cli
-    <section class="cli">
-        <div class="container grid">
-            <img src="images/cli.png" alt="">
-            <div class="card">
-                <h3>Easy to use, cross platform CLI</h3>
-            </div>
-            <div class="card">
-                <h3>Deploy in seconds</h3>
-            </div>
-        </div>
-    </section>
-    -->
-
     <!-- Projects -->
     <section id="projects" class="cloud bg-primary my-2 py-4">
-        <div class="container">
+        <div class="container grid grid-3">
             <div class="text-center">
                 <h2 class="lg">Toro Navigation</h2>
                 <p class="lead my-1">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
@@ -93,7 +79,7 @@
 
 
     <section class="cloud my-2 py-4">
-        <div class="container">
+        <div class="container grid grid-3">
             <div class="text-center">
                 <h2 class="lg">Smart Parking</h2>
                 <p class="lead my-1">Senior project where we had to come up with an app that we haven't seen before. This app would take a livestream and give real time updates on which parking spots were open/taken. In this case it was our school parking lot which was always busy.</p>
