--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
                 <p class="lead my-1">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
                 <a href="https://www.github.com/mlyhoops" class="btn btn-dark">Read More</a>
             </div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/eSMuyyN10nw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+			<div class="showcase-pic">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/eSMuyyN10nw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</div>
     </section>
 
 
@@ -85,8 +87,10 @@
                 <p class="lead my-1">Senior project where we had to come up with an app that we haven't seen before. This app would take a livestream and give real time updates on which parking spots were open/taken. In this case it was our school parking lot which was always busy.</p>
                 <a href="https://www.github.com/mlyhoops" class="btn btn-dark">Read More</a>
             </div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+			<div class="showcase-pic">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
+		</div>
     </section>
 
     <!-- Footer -->
