--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <a href="https://www.github.com/mlyhoops" class="btn btn-dark">Read More</a>
             </div>
 			<div class="showcase-pic">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 			</div>
 		</div>
     </section>
