--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a href="https://github.com/mlyhoops/CSUDHClassroomNav" class="btn btn-dark">Read More</a>
             </div>
 		<div class="showcase-pic container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/eSMuyyN10nw" title="YouTube video player" style="position:relative; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/eSMuyyN10nw" title="YouTube video player" style="position:absolute; top:100; left: 100" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
     </section>
@@ -88,7 +88,7 @@
                 <a href="https://github.com/mlyhoops/Smart-Parking" class="btn btn-dark">Read More</a>
             </div>
 		<div class="showcase-pic container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" style="position:relative; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
     </section>
