--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <!-- Projects -->
     <section id="projects" class="cloud bg-primary my-2 py-4">
-        <div class="grid grid-3" align-items: "center";>
-            <div class="text-center">
+        <div class="grid grid-3";>
+            <div class="showcase-text text-center">
                 <h2 class="lg">Toro Navigation</h2>
                 <p class="lead my-1">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
                 <a href="https://github.com/mlyhoops/CSUDHClassroomNav" class="btn btn-dark">Read More</a>
@@ -81,8 +81,8 @@
 
 
     <section class="cloud my-2 py-4">
-        <div class="grid grid-3" align-items: "center";>
-            <div class="text-center">
+        <div class="grid grid-3";>
+            <div class="showcase-text text-center">
                 <h2 class="lg">Smart Parking</h2>
                 <p class="lead my-1">Senior project where we had to come up with an app that we haven't seen before. This app would take a livestream and give real time updates on which parking spots were open/taken. In this case it was our school parking lot which was always busy.</p>
                 <a href="https://github.com/mlyhoops/Smart-Parking" class="btn btn-dark">Read More</a>
