--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container grid">
             <div class="text-center">
                 <h2 class="lg">Toro Navigation</h2>
-                <p class="showcase-text" style="font-size:25px; margin-top: 5%">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
+                <p class="showcase-text" style="font-size:25px; padding-top: 5%">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
                 <a href="https://github.com/mlyhoops/CSUDHClassroomNav" class="btn btn-dark">Read More</a>
             </div>
 		<div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" align-items: "center";>
