--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- Projects -->
     <section id="projects" class="cloud bg-primary my-2 py-4">
-	<h2 class="lg" style= "align-text: center">Toro Navigation</h2>
+	<h2 class="lg" style= "text-align: center">Toro Navigation</h2>
         <div class="container grid">
             <div class="text-center">
                 <p class="showcase-text" style="font-size:25px; padding-top: 7%">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
@@ -81,7 +81,7 @@
 
 
     <section class="cloud my-2 py-4">
-	<h2 class="lg" style= "align-text: center">Smart Parking</h2>
+	<h2 class="lg" style= "text-align: center">Smart Parking</h2>
         <div class="container grid">
             <div class="text-center">
                 <p class="showcase-text" style="font-size:25px; padding-top: 7%">Senior project where we had to come up with an app that we haven't seen before. This app would take a livestream and give real time updates on which parking spots were open/taken. In this case it was our school parking lot which was always busy.</p>
