--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <p class="showcase-text" style="font-size:25px; ">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
                 <a href="https://github.com/mlyhoops/CSUDHClassroomNav" class="btn btn-dark">Read More</a>
             </div>
-		<div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%; height:56.25%" align-items: "center";>
+		<div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
 			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/eSMuyyN10nw" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
@@ -87,7 +87,7 @@
                 <p class="showcase-text" style="font-size:25px; ">Senior project where we had to come up with an app that we haven't seen before. This app would take a livestream and give real time updates on which parking spots were open/taken. In this case it was our school parking lot which was always busy.</p>
                 <a href="https://github.com/mlyhoops/Smart-Parking" class="btn btn-dark">Read More</a>
             </div>
-		<div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%; height:56.25%" align-items: "center";>
+		<div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
 			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
