--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<h2 class="lg" style= "text-align: center">Toro Navigation</h2>
         <div class="container grid">
             <div class="text-center">
-                <p class="showcase-text" style="font-size:25px; ">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
+                <p class="showcase-text" style="font-size:25px;">Project for software development class where I worked in a group to create an Android app that gives you live directions to whatever classroom you were looking for on the CSUDH campus.</p>
                 <a href="https://github.com/mlyhoops/CSUDHClassroomNav" class="btn btn-dark">Read More</a>
             </div>
 		<div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
@@ -84,7 +84,7 @@
 	<h2 class="lg" style= "text-align: center">Smart Parking</h2>
         <div class="container grid">
             <div class="text-center">
-                <p class="showcase-text" style="font-size:25px; margin-top: 25%">Senior project where we had to come up with an app that we haven't seen before. This app takes a livestream and gives real time updates on which parking spots were open/taken. This demo was our school parking lot which was always busy.</p>
+                <p class="showcase-text" style="font-size:25px;">Senior project where we had to come up with an app that we haven't seen before. This app takes a livestream and gives real time updates on which parking spots were open/taken. This demo was our school parking lot which was always busy.</p>
                 <a href="https://github.com/mlyhoops/Smart-Parking" class="btn btn-dark">Read More</a>
             </div>
 		<div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
