--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
         </h2>
         <div class="container flex">
             <!--<embed src="/Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%" /> -->
-            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" style="min-height:100vh;min-width:100vh"></object>
+            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" style="height:100vh;width:100vh"></object>
         </div>
     </section>
 
