--- a/resume.html
+++ b/resume.html
@@ -43,9 +43,9 @@
         <h2 class="md text-center my-2">
             Resume
         </h2>
-        <div class="container flex">
+        <div class='embed-responsive' style='padding-bottom:150%'>
             <!--<embed src="/Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%" /> -->
-            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" style="width=100%; height=800px"></object>
+            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%"></object>
         </div>
     </section>
 
