--- a/resume.html
+++ b/resume.html
@@ -44,8 +44,8 @@
             Resume
         </h2>
         <div class='embed-responsive' style='padding-bottom:150%'>
-            <!--<embed src="/Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%" /> -->
-            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%"></object>
+            <embed src="/Matthew_Yamamoto_Resume.pdf" type="application/pdf#view=FitH" width="actual-width.px" height="actual-height.px"/>
+            <!--<object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%"></object>-->
         </div>
     </section>
 
