--- a/resume.html
+++ b/resume.html
@@ -43,8 +43,7 @@
         <h2 class="md text-center my-2">
             Resume
         </h2>
-        <div class='embed-responsive' style='padding-bottom:150%'>
-            <!--<embed src="/Matthew_Yamamoto_Resume.pdf" type="application/pdf#view=FitH" width="actual-width.px" height="actual-height.px"/>-->
+        <div class="container flex">
             <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%"></object>
         </div>
     </section>
