--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
             Resume
         </h2>
         <div class="container flex">
-            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="50vh"></object>
+            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="50vn"></object>
         </div>
     </section>
 
