--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
             Resume
         </h2>
         <div >
-            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100vw" height="800px"></object>
+            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="100%"></object>
         </div>
     </section>
 
