--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
         <h2 class="md text-center my-2">
             Resume
         </h2>
-        <div >
+        <div class="container flex">
             <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="600px"></object>
         </div>
     </section>
