--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
         </div>
     </section>
 
-    <!-- Edcuation -->
+    <!-- Education -->
     <section class="education py-3">
         <h2 class="md text-center my-2">
             Education
