--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 </ul>
             </nav>
             <div class="social">
+		<a href="https://www.linkedin.com/in/matthewyamamoto1197/"><i class="fab fa-linkedin fa-2x"></i></a>
                 <a href="https://www.github.com/mlyhoops"><i class="fab fa-github fa-2x"></i></a>
                 <a href="https://www.facebook.com/matt.yamamoto.3/"><i class="fab fa-facebook fa-2x"></i></a>
                 <a href="https://www.instagram.com/tracked_mk7/"><i class="fab fa-instagram fa-2x"></i></a>
