--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                         <textarea name="message" placeholder="Comments" required></textarea>
                     </div>
                     <input type="submit" value="Send" class="btn btn-primary">
-                    <input type="View My LinkedIn" <a href="https://twitter.com/mlyhoops"><i class="fab fa-linkedin fa-2x"></i></a> class="btn btn-primary">
+                    <a href="https://twitter.com/mlyhoops"><i class="fab fa-linkedin fa-2x"></i></a>
                 </form>
                 <!-- <form>
                     <div class="form-control">
