--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <section class="showcase1">
         <div class="container grid">
             <div class="showcase-form card">
-                <h2>Contact Me</h2>
+                <h2>Contact Me</h2><a href="https://twitter.com/mlyhoops"><i class="fab fa-linkedin fa-2x"></i></a>
                  <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true">
                     <input type="hidden" name="form-name" value="contact">
                     <p class="hidden">
@@ -59,7 +59,6 @@
                         <textarea name="message" placeholder="Comments" required></textarea>
                     </div>
                     <input type="submit" value="Send" class="btn btn-primary">
-                    <a href="https://twitter.com/mlyhoops"><i class="fab fa-linkedin fa-2x"></i></a>
                 </form>
                 <!-- <form>
                     <div class="form-control">
