--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <section class="showcase1">
         <div class="container grid">
             <div class="showcase-form card">
-                <h2>Contact Me</h2><a href="https://twitter.com/mlyhoops"><i class="fab fa-linkedin fa-2x"></i></a>
+                <h2>Contact Me <a href="https://twitter.com/mlyhoops"><i class="fab fa-linkedin fa-2x"></i></a></h2>
                  <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true">
                     <input type="hidden" name="form-name" value="contact">
                     <p class="hidden">
