--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <div class="container grid">
             <div class="showcase-form card">
                 <h2>Contact Me &nbsp <a href="https://www.linkedin.com/in/matthewyamamoto1197/"><i class="fab fa-linkedin fa-1x"></i></a></h2>
-                 <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true">
+                 <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true" width="100vw" height="100vh">
                     <input type="hidden" name="form-name" value="contact">
                     <p class="hidden">
                         <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
