--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,9 @@
     <!-- Contact -->
     <section class="showcase1">
         <div class="container grid">
-            <div class="showcase-form card">
+            <div class="showcase-form card" width="100vw" height="100vh">
                 <h2>Contact Me &nbsp <a href="https://www.linkedin.com/in/matthewyamamoto1197/"><i class="fab fa-linkedin fa-1x"></i></a></h2>
-                 <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true" width="100vw" height="100vh">
+                 <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true">
                     <input type="hidden" name="form-name" value="contact">
                     <p class="hidden">
                         <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
