--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <div>
                 <h1 class="xl">Contact</h1>
                 <p class="lead">
-                    Leave a comment and review my resume. Thank you!
+                    Leave a comment or contact me on LinkedIn by clicking the button below. If there is an issue with the site or you have a question for me please reach out! Thank you!
                 </p>
             </div>
             <img src="images/docs.png" alt="">
