--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
 
     
     <!-- Footer -->
-    <footer class="footer bg-dark py-5" position:"fixed" bottom:"0" left:"0">
+    <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
                 <h1>Matthew Yamamoto
