--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="showcase">
         <div class="container grid">
             <div class="showcase-text">
-                <h1>Jr. Software Developer</h1>
+                <h1>Software Developer</h1>
                 <p>Hello, I am a Software Developer that is interested in Robotics and Data Analysis. This website showcases all of my previous projects, both software and mechanical. If you would like to review my resume, please click below. Thank you for checking out my site! </p>
                 <a href="resume.html" class="btn btn-outline">View Resume</a>
             </div>
