--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,169 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Matthew Yamamoto | A little about me</title>
+</head>
+<body>
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="container flex">
+            <h1 class="logo">Matthew Yamamoto</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+    <!-- Head -->
+    <section class="features-head bg-primary py-3">
+        <div class="container grid">
+            <div class="from-left">
+                <h1 class="xl">Projects</h1>
+                <p class="lead">
+                    All the projects that I have worked on in the past that I believe was worth sharing. These include school projects and personal projects both software and hardware.
+                </p>
+                <a href="contact.html" class="btn btn-outline">Contact Me</a>
+            </div>
+            <img src="images/docs.png" alt="">
+        </div>
+    </section>
+    
+     <!-- MK7 Brake Ducts -->
+    <section class="languages bg-light py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">Work Experience</h1>
+                <h4>MK7 Brake Ducts</h4>
+                <ul>
+                    <li>Monitored automation equipment and terminal operating system to make sure operations for the vessel were running properly.</li>
+                    <li>Used SQL and crystal reports along with camera footage to research lost containers.</li>
+                    <li>Tested operations in dev environment to make sure new upgrades work seamlessly with live operations.</li>
+                </ul>
+            </div>
+            <img src="images/logos/cogo.png" alt="">
+        </div>
+    </section>
+
+    <!-- Toros Nav -->
+    <section class="education py-3">
+        <h2 class="md text-center my-2">
+            Toros Nav
+        </h2>
+        <div class="container flex">
+            <div class="toro-card">
+                <img src="images/logos/toro.png" alt="">
+            </div>
+            <div class="card">
+                <h3>California State University Dominguez Hills (2015-2019)</h3>
+                <p>
+                    Graduated in 2019 with a Bachelors of Science Degree in Computer Science.
+                </p>
+            </div>
+            <div class="card">
+                <h3>California State University Dominguez Hills (2022-2024)</h3>
+                <p>
+                    Will graduate in 2024 with a Masters of Science Degree in Computer Science.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Smart Parking -->
+    <section class="languages bg-light py-3" >
+        <h2 class="md text-center my-2">
+            Smart Parking
+        </h2>
+        <div class="container flex">
+            <div class="card">
+                <h4>Python</h4>
+                <img src="images/logos/python.png" alt="">
+            </div>
+            <div class="card">
+                <h4>SQL</h4>
+                <img src="images/logos/sql.png" alt="">
+            </div>
+            <div class="card">
+                <h4>HTML</h4>
+                <img src="images/logos/html.png" alt="">
+            </div>
+            <div class="card">
+                <h4>CSS</h4>
+                <img src="images/logos/css.png" alt="">
+            </div>
+            <div class="card">
+                <h4>JavaScript</h4>
+                <img src="images/logos/javascript.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Java</h4>
+                <img src="images/logos/java.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- Camera Slider -->
+    <section class="work py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">Work Experience</h1>
+                <h4>Camera Slider</h4>
+                <ul>
+                    <li>Monitored automation equipment and terminal operating system to make sure operations for the vessel were running properly.</li>
+                    <li>Used SQL and crystal reports along with camera footage to research lost containers.</li>
+                    <li>Tested operations in dev environment to make sure new upgrades work seamlessly with live operations.</li>
+                </ul>
+            </div>
+            <img src="images/logos/cogo.png" alt="">
+        </div>
+    </section>
+
+    <!-- Projects -->
+    <section class="bg-light py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">Projects</h1>
+                <p>
+                    Please view my projects on my Github page <a href="https://github.com/mlyhoops"><i><b>here.</b></i></a> You can also view the YouTube video demos of my school projects on the <a href="index.html#projects"><i><b>Home Page.</b></i></a>
+                </p>
+            </div>
+            <img src="images/logos/github.png" alt="">
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>Matthew Yamamoto
+                </h1>
+                <p>Copyright &copy; 2022</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <a href="https://www.linkedin.com/in/matthewyamamoto1197/"><i class="fab fa-linkedin fa-2x"></i></a>
+                <a href="https://github.com/mlyhoops"><i class="fab fa-github fa-2x"></i></a>
+                <a href="https://www.facebook.com/matt.yamamoto.3/"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="https://www.instagram.com/tracked_mk7/"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="https://twitter.com/mlyhoops"><i class="fab fa-twitter fa-2x"></i></a>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
