--- a/projects.html
+++ b/projects.html
@@ -43,8 +43,8 @@
     <section class="languages bg-light py-3">
         <div class="container grid">
             <div>
-                <h1 class="md">Work Experience</h1>
-                <h4>MK7 Brake Ducts</h4>
+                <h1 class="md">MK7 GTI Brake Ducts</h1>
+                <h4>3D Printed ASA Brake Ducts</h4>
                 <ul>
                     <li>Monitored automation equipment and terminal operating system to make sure operations for the vessel were running properly.</li>
                     <li>Used SQL and crystal reports along with camera footage to research lost containers.</li>
