--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
     </section>
     
     <!-- MK7 GTI -->
-    <section class="languages bg-light py-3">
+    <section class="languages py-3">
         <div class="container grid">
             <div>
                 <h1 class="md">MK7 GTI Project Car</h1>
