--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
                     <li>Tested operations in dev environment to make sure new upgrades work seamlessly with live operations.</li>
                 </ul>
             </div>
-            <img src="images/MK7 GTI.png" alt="">
+            <img src="images/MK7 GTI.jpg" alt="">
         </div>
     </section>
 
