--- a/projects.html
+++ b/projects.html
@@ -70,6 +70,22 @@
             <img src="images/MK7 GTI.jpg" alt="">
         </div>
     </section>
+    
+    <!-- MK7 GTI -->
+    <section class="languages bg-light py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">MK7 GTI Project Car</h1>
+                <h4>Project Car for Fun Drives and Track Days</h4>
+                <ul>
+                    <li>Monitored automation equipment and terminal operating system to make sure operations for the vessel were running properly.</li>
+                    <li>Used SQL and crystal reports along with camera footage to research lost containers.</li>
+                    <li>Tested operations in dev environment to make sure new upgrades work seamlessly with live operations.</li>
+                </ul>
+            </div>
+            <img src="images/MK7 GTI.jpg" alt="">
+        </div>
+    </section>
 
     <!-- Toros Nav -->
     <section class="education py-3">
