--- a/projects.html
+++ b/projects.html
@@ -46,9 +46,9 @@
                 <h1 class="md">MK7 GTI Brake Ducts</h1>
                 <h4>3D Printed ASA Brake Ducts</h4>
                 <ul>
-                    <li>Monitored automation equipment and terminal operating system to make sure operations for the vessel were running properly.</li>
-                    <li>Used SQL and crystal reports along with camera footage to research lost containers.</li>
-                    <li>Tested operations in dev environment to make sure new upgrades work seamlessly with live operations.</li>
+                    <li>Designed and printed brake ducts for my GTI in ASA in order to cool the brake rotors.
+                    I have a TTRS Big Brake Kit installed on my car and the OEM rotors are known to heat up due to the bad rotor design.
+                    In order to save myself some money, instead of buying $1k upgraded rotors, I built these ducts to cool the brakes for spirited drives and track days.</li>
                 </ul>
             </div>
             <img src="images/logos/cogo.png" alt="">
