--- a/projects.html
+++ b/projects.html
@@ -47,8 +47,9 @@
                 <h4>3D Printed ASA Brake Ducts</h4>
                 <ul>
                     <li>Designed and printed brake ducts for my GTI in ASA in order to cool the brake rotors.
-                    I have a TTRS Big Brake Kit installed on my car and the OEM rotors are known to heat up due to the bad rotor design.
-                    In order to save myself some money, instead of buying $1k upgraded rotors, I built these ducts to cool the brakes for spirited drives and track days.</li>
+                    I have a TTRS Big Brake Kit installed on my car and the OEM rotors are known to heat up due to the bad rotor fin design.
+                    In order to save myself some money, instead of buying $1k 2 piece rotors, I built these ducts to cool the brakes for spirited drives and track days.
+                    I have the 2017 Sport trim which means there are no fog lights on the bumper so I took advantage of the extra space.</li>
                 </ul>
             </div>
             <img src="images/logos/cogo.png" alt="">
