--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,11 @@
                     I have the 2017 Sport trim which means there are no fog lights on the bumper so I took advantage of the extra space.</li>
                 </ul>
             </div>
-            <img src="images/logos/cogo.png" alt="">
+            <video width="320" height="240" controls>
+            <source src="images/duct cad.mp4" type="video/mp4">
+            
+            Your browser does not support the video tag.
+            </video>
         </div>
     </section>
     
