--- a/projects.html
+++ b/projects.html
@@ -60,19 +60,18 @@
         </div>
     </section>
     
-    <!-- MK7 GTI -->
+    <!-- Camera Slider -->
     <section class="languages py-3">
         <div class="container grid">
             <div>
-                <h1 class="md">MK7 GTI Project Car</h1>
-                <h4>Project Car for Fun Drives and Track Days</h4>
+                <h1 class="md">Camera Slider</h1>
+                <h4>Camera Slider for B-Roll Shots</h4>
                 <ul>
-                    <li>Monitored automation equipment and terminal operating system to make sure operations for the vessel were running properly.</li>
-                    <li>Used SQL and crystal reports along with camera footage to research lost containers.</li>
-                    <li>Tested operations in dev environment to make sure new upgrades work seamlessly with live operations.</li>
+                    <li>Created a camera slider so I can get some cool shots of my car and to get cool B-Roll shots of whatever I want. Also wanted to brush up my skills 
+                    for working with microcontrollers and motors.</li>
                 </ul>
             </div>
-            <img src="images/MK7 GTI.jpg" alt="">
+            <img src="images/duct conversion.jpg" alt="">
         </div>
     </section>
     
