--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
                     for working with microcontrollers and motors.</li>
                 </ul>
             </div>
-            <img src="images/camera slider.jpg" alt="">
+            <img src="images/camera slider.jpeg" alt="">
         </div>
     </section>
     
