--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                 <h1 class="md">MK7 GTI Project Car</h1>
                 <h4>Project Car for Fun Drives and Track Days</h4>
                 <ul>
-                    <li>This is my project car that I built for canyon runs and track days. I have installed multiple aftermarket parts in order to improve the 
+                    <li>I am very passionate about cars and driving and this is my project car that I built for canyon runs and track days. I have installed multiple aftermarket parts in order to improve the 
                     overall performance of the car and it drives like a completely different machine. To name a few of the upgrades that I have installed myself include Bilstein B14 coilovers, TTRS BBK, 
                     Whiteline rear sway bar, Whiteline LCA, 034 roll center ball joints, Powerflex rear trailing arm bushing and dogbone insert, and many many more parts.</li>
                 </ul>
