--- a/projects.html
+++ b/projects.html
@@ -91,27 +91,23 @@
         </div>
     </section>
 
-    <!-- Toros Nav -->
-    <section class="education py-3">
-        <h2 class="md text-center my-2">
-            Toros Nav
-        </h2>
-        <div class="container flex">
-            <div class="toro-card">
-                <img src="images/logos/toro.png" alt="">
+    <!-- TorosNav -->
+    <section class="languages py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">Toros Nav</h1>
+                <h4>Navigation App for Finding Classes</h4>
+                <ul>
+                    <li>Designed an Android application with GPS and Wifi waypoints to be able to find your class at CSUDH. The campus isn't that big but it can still 
+                    be confusing to find your class and GPS only works well outside. By using a 3rd party API, I was able to map out the school with waypoints and wifi points 
+                    which made finding your class much easier.</li>
+                </ul>
             </div>
-            <div class="card">
-                <h3>California State University Dominguez Hills (2015-2019)</h3>
-                <p>
-                    Graduated in 2019 with a Bachelors of Science Degree in Computer Science.
-                </p>
-            </div>
-            <div class="card">
-                <h3>California State University Dominguez Hills (2022-2024)</h3>
-                <p>
-                    Will graduate in 2024 with a Masters of Science Degree in Computer Science.
-                </p>
-            </div>
+            <video width="640" height="480" controls>
+            <source src="images/duct cad.mp4" type="video/mp4">
+            
+            Your browser does not support the video tag.
+            </video>
         </div>
     </section>
 
@@ -136,11 +132,11 @@
         </div>
     </section>
 
-    <!-- ToroNav -->
+    <!-- Toros Nav -->
     <section class="languages py-3">
         <div class="container grid">
             <div>
-                <h1 class="md">ToroNav</h1>
+                <h1 class="md">Toros Nav</h1>
                 <h4>Navigation App for Finding Classes</h4>
                 <ul>
                     <li>Designed an Android application with GPS and Wifi waypoints to be able to find your class at CSUDH. The campus isn't that big but it can still 
